force-app/main/default/objects/Disable_Custom_Triggers__c/Disable_Custom_Triggers__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Disable Custom Triggers</label>
</CustomObject>