force-app/main/default/objects/Disable_Custom_Triggers__c/fields/ApplicationTrigger__c.field-meta.xml
<CustomField>
    <fullName>ApplicationTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ApplicationTrigger</label>
    <type>Checkbox</type>
</CustomField>