force-app/main/default/objects/Disable_Custom_Triggers__c/fields/Bank_Account_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Account Trigger</label>
    <type>Checkbox</type>
</CustomField>