force-app/main/default/objects/Disable_Custom_Triggers__c/fields/CollateralOwnerTrigger__c.field-meta.xml
<CustomField>
    <fullName>CollateralOwnerTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CollateralOwnerTrigger</label>
    <type>Checkbox</type>
</CustomField>