force-app/main/default/objects/Disable_Custom_Triggers__c/fields/CollateralTrigger__c.field-meta.xml
<CustomField>
    <fullName>CollateralTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CollateralTrigger</label>
    <type>Checkbox</type>
</CustomField>