force-app/main/default/objects/Disable_Custom_Triggers__c/fields/ContractTrigger__c.field-meta.xml
<CustomField>
    <fullName>ContractTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContractTrigger</label>
    <type>Checkbox</type>
</CustomField>