force-app/main/default/objects/Disable_Custom_Triggers__c/fields/ContractUpdateEmailTrigger__c.field-meta.xml
<CustomField>
    <fullName>ContractUpdateEmailTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContractUpdateEmailTrigger</label>
    <type>Checkbox</type>
</CustomField>