force-app/main/default/objects/Disable_Custom_Triggers__c/fields/LoanCollateralTrigger__c.field-meta.xml
<CustomField>
    <fullName>LoanCollateralTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LoanCollateralTrigger</label>
    <type>Checkbox</type>
</CustomField>