force-app/main/default/objects/Disable_Custom_Triggers__c/fields/QueueUserTrigger__c.field-meta.xml
<CustomField>
    <fullName>QueueUserTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QueueUserTrigger</label>
    <type>Checkbox</type>
</CustomField>