force-app/main/default/objects/Disable_Custom_Triggers__c/fields/UpdateValuationDateExpiry__c.field-meta.xml
<CustomField>
    <fullName>UpdateValuationDateExpiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UpdateValuationDateExpiry</label>
    <type>Checkbox</type>
</CustomField>