force-app/main/default/objects/Disable_Custom_Triggers__c/fields/UpdateValueDateTrigger__c.field-meta.xml
<CustomField>
    <fullName>UpdateValueDateTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UpdateValueDateTrigger</label>
    <type>Checkbox</type>
</CustomField>